feat: Agregar nuevas rutas y métodos para desasignar oficinas, equipos y usuarios, así como registrar trazabilidad en las asignaciones
