# src/config/swagger/swagger-output.json
@@ -133,6 +133,41 @@
         ]
       }
     },
+    "/edificios/{edificioId}/desasignarOficina/{oficinaId}": {
+      "post": {
+        "tags": [
+          "Edificios"
+        ],
+        "summary": "Desasigna una oficina de un edificio",
+        "description": "Desasigna una oficina existente de un edificio específico.",
+        "parameters": [
+          {
+            "name": "edificioId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del edificio al que se desasignará la oficina"
+          },
+          {
+            "name": "oficinaId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina a agregar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/EquipoInformaticos/": {
       "get": {
         "tags": [
@@ -211,8 +246,8 @@
         "tags": [
           "Equipos Informaticos"
         ],
-        "summary": "Asigna una oficina a un equipo informático",
-        "description": "Asigna una oficina específica a un equipo informático.",
+        "summary": "Desasigna una oficina de un equipo informático",
+        "description": "Desasigna una oficina específica de un equipo informático.",
         "parameters": [
           {
             "name": "equipoId",
@@ -225,8 +260,7 @@
             "name": "oficinaId",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID de la oficina a asignar"
+            "type": "string"
           }
         ],
         "responses": {
@@ -241,7 +275,7 @@
         ]
       }
     },
-    "/EquipoInformaticos/{equipoId}/empleado/{empleadoId}": {
+    "/EquipoInformaticos/{equipoId}/asignarEmpleado/{empleadoId}": {
       "post": {
         "tags": [
           "Equipos Informaticos"
@@ -276,20 +310,18 @@
         ]
       }
     },
-    "/EquipoInformaticos/{equipoId}/mantenimiento": {
+    "/EquipoInformaticos/{equipoId}/desAsignarEmpleado' */ /* #swagger.method = 'post' */ /* #swagger.summary = 'Desasigna un empleado de un equipo informático' */ /* #swagger.description = 'Desasigna un empleado específico de un equipo informático.' */ /* #swagger.parameters[": {
       "post": {
         "tags": [
           "Equipos Informaticos"
         ],
-        "summary": "Agrega un registro de mantenimiento a un equipo informático",
-        "description": "Agrega un registro de mantenimiento a un equipo informático específico. El cuerpo debe contener los datos del mantenimiento.",
+        "description": "",
         "parameters": [
           {
             "name": "equipoId",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID del equipo informático"
+            "type": "string"
           }
         ],
         "responses": {
@@ -301,17 +333,181 @@
           {
             "bearerAuth": []
           }
+        ]
+      }
+    },
+    "/EquipoInformaticos/agregarMantenimiento": {
+      "post": {
+        "tags": [
+          "Equipos Informaticos"
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Mantenimiento"
+        "summary": "Agrega un registro de mantenimiento a uno o varios equipos informáticos",
+        "description": "Agrega un registro de mantenimiento a uno o varios equipos informáticos. El cuerpo debe contener el idUsuario y un array de idsEquipos.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Objeto con la data de registro y equipoId",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "object"
+                },
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "registroData": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "object"
+                        },
+                        "description": {
+                          "type": "string",
+                          "example": "Datos del registro de mantenimiento"
+                        },
+                        "properties": {
+                          "type": "object",
+                          "properties": {
+                            "descripcion": {
+                              "type": "object",
+                              "properties": {
+                                "type": {
+                                  "type": "string",
+                                  "example": "string"
+                                }
+                              }
+                            },
+                            "fecha": {
+                              "type": "object",
+                              "properties": {
+                                "type": {
+                                  "type": "string",
+                                  "example": "string"
+                                },
+                                "format": {
+                                  "type": "string",
+                                  "example": "date-time"
+                                }
+                              }
+                            },
+                            "realizadoPor": {
+                              "type": "object",
+                              "properties": {
+                                "type": {
+                                  "type": "string",
+                                  "example": "string"
+                                }
+                              }
+                            }
+                          }
+                        },
+                        "required": {
+                          "type": "array",
+                          "example": [
+                            "descripcion",
+                            "fecha",
+                            "realizadoPor"
+                          ],
+                          "items": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    },
+                    "equipoId": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "array",
+                          "example": [
+                            "string",
+                            "array"
+                          ],
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "description": {
+                          "type": "string",
+                          "example": "ID del equipo informático"
+                        },
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "required": {
+                  "type": "array",
+                  "example": [
+                    "registroData",
+                    "equipoId"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
               }
             }
           }
-        }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/EquipoInformaticos/{equipoId}/removerMantenimiento/{registroId}": {
+      "post": {
+        "tags": [
+          "Equipos Informaticos"
+        ],
+        "summary": "Remueve un registro de mantenimiento de un equipo informático",
+        "description": "Remueve un registro de mantenimiento específico de un equipo informático.",
+        "parameters": [
+          {
+            "name": "equipoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del equipo informático"
+          },
+          {
+            "name": "registroId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del registro de mantenimiento a remover"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/EquipoInformaticos/{equipoId}/asignarTipo/{tipoId}": {
@@ -349,7 +545,7 @@
         ]
       }
     },
-    "/EquipoInformaticos/{equipoId}/modelo/{modeloId}": {
+    "/EquipoInformaticos/{equipoId}/asignarModelo/{modeloId}": {
       "post": {
         "tags": [
           "Equipos Informaticos"
@@ -565,7 +761,42 @@
         ]
       }
     },
-    "/marcas/agregar-modelos": {
+    "/marcas/{marcaId}/desasignarModelo/{modeloId}": {
+      "post": {
+        "tags": [
+          "Marcas"
+        ],
+        "summary": "Desasignar un modelo de una marca",
+        "description": "Desasigna un modelo específico de una marca usando sus IDs.",
+        "parameters": [
+          {
+            "name": "marcaId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la marca"
+          },
+          {
+            "name": "modeloId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del modelo a agregar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/marcas/agregarModelos": {
       "post": {
         "tags": [
           "Marcas"
@@ -861,6 +1092,41 @@
         ]
       }
     },
+    "/oficinas/{idOficina}/removerEmpleado/{idEmpleado}": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "summary": "Remover un empleado de una oficina",
+        "description": "Remueve un empleado específico de una oficina.",
+        "parameters": [
+          {
+            "name": "idOficina",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina"
+          },
+          {
+            "name": "idEmpleado",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del empleado a agregar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/oficinas/empleados": {
       "post": {
         "tags": [
@@ -906,7 +1172,7 @@
         ]
       }
     },
-    "/oficinas/{idOficinaPadre}/suboficina/{idOficinaHija}": {
+    "/oficinas/{idOficinaPadre}/agregarSuboficina/{idOficinaHija}": {
       "post": {
         "tags": [
           "Oficinas"
@@ -941,7 +1207,42 @@
         ]
       }
     },
-    "/oficinas/{idOficinaHija}/oficinapadre/{idOficinaPadre}": {
+    "/oficinas/{idOficinaPadre}/removerSuboficina/{idOficinaHija}": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "summary": "Remover una suboficina de una oficina",
+        "description": "Remueve una suboficina de una oficina padre.",
+        "parameters": [
+          {
+            "name": "idOficinaPadre",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina padre"
+          },
+          {
+            "name": "idOficinaHija",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina hija"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/oficinas/{idOficinaHija}/agregarOficinaPadre/{idOficinaPadre}": {
       "post": {
         "tags": [
           "Oficinas"
@@ -976,7 +1277,33 @@
         ]
       }
     },
-    "/oficinas/{idOficina}/edificio/{idEdificio}": {
+    "/oficinas/{idOficinaHija}/removerOficinaPadre' */ /* #swagger.method = 'post' */ /* #swagger.summary = 'Remover una oficina padre de una oficina hija' */ /* #swagger.description = 'Remueve una oficina padre de una oficina hija.' */ /* #swagger.parameters[": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "idOficinaHija",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/oficinas/{idOficina}/asignarEdificio/{idEdificio}": {
       "post": {
         "tags": [
           "Oficinas"
@@ -1011,7 +1338,41 @@
         ]
       }
     },
-    "/oficinas/{idOficina}/equipo/{idEquipo}": {
+    "/oficinas/{idOficina}/removerEdificio/{idEdificio}": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "summary": "Remover un edificio de una oficina",
+        "description": "Remueve un edificio de una oficina.",
+        "parameters": [
+          {
+            "name": "idOficina",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina"
+          },
+          {
+            "name": "idEdificio",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/oficinas/{idOficina}/asignarEquipo/{idEquipo}": {
       "post": {
         "tags": [
           "Oficinas"
@@ -1046,7 +1407,42 @@
         ]
       }
     },
-    "/oficinas/equipos": {
+    "/oficinas/{idOficina}/removerEquipo/{idEquipo}": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "summary": "Remover un equipo de una oficina",
+        "description": "Remueve un equipo específico de una oficina.",
+        "parameters": [
+          {
+            "name": "idOficina",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de la oficina"
+          },
+          {
+            "name": "idEquipo",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del equipo a agregar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/oficinas/asignarEquipos": {
       "post": {
         "tags": [
           "Oficinas"
@@ -1077,6 +1473,32 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/oficinas/{idOficina}/removerEquipos' */ /* #swagger.method = 'post' */ /* #swagger.summary = 'Remover múltiples equipos de una oficina' */ /* #swagger.description = 'Remueve varios equipos de una oficina.' */ /* #swagger.parameters[": {
+      "post": {
+        "tags": [
+          "Oficinas"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "idOficina",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -1366,7 +1788,7 @@
         ]
       }
     },
-    "/tiposEquipos/asignar-equipo/{tipoEquipoId}/{equipoId}": {
+    "/tiposEquipos/{tipoEquipoId}/asignarEquipo/{equipoId}": {
       "post": {
         "tags": [
           "Tipos de Equipo"
@@ -1401,7 +1823,42 @@
         ]
       }
     },
-    "/tiposEquipos/asignar-equipos": {
+    "/tiposEquipos/{tipoEquipoId}/desAsignarEquipo/{equipoId}": {
+      "post": {
+        "tags": [
+          "Tipos de Equipo"
+        ],
+        "summary": "Desasigna un equipo de un tipo de equipo",
+        "description": "Desasigna un equipo específico de un tipo de equipo usando sus IDs en la URL.",
+        "parameters": [
+          {
+            "name": "tipoEquipoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del tipo de equipo al que se asignará el equipo"
+          },
+          {
+            "name": "equipoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del equipo a asignar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/tiposEquipos/asignarEquipos": {
       "post": {
         "tags": [
           "Tipos de Equipo"
@@ -1621,6 +2078,41 @@
         ],
         "summary": "Agrega un equipo a un usuario",
         "description": "Agrega un equipo específico a la lista de equipos asignados de un usuario.",
+        "parameters": [
+          {
+            "name": "idUsuario",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del usuario"
+          },
+          {
+            "name": "idEquipo",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del equipo"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/usuarios/{idUsuario}/desAsignarEquipo/{idEquipo}": {
+      "post": {
+        "tags": [
+          "Usuarios"
+        ],
+        "summary": "Desasigna un equipo de un usuario",
+        "description": "Desasigna un equipo específico de la lista de equipos asignados de un usuario.",
         "parameters": [
           {
             "name": "idUsuario",
